--- a/little-lemon/src/index.css
+++ b/little-lemon/src/index.css
@@ -1,10 +1,10 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+:root {
+  font-family: Markazi, Karla, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(45, 45, 45, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -15,7 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fcfcfc;
   text-decoration: inherit;
 }
 a:hover {
@@ -23,12 +23,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 0; /* Remove any margins */
+  display: block; /* Avoid flexbox centering affecting the layout */
   min-width: 320px;
-  min-height: 100vh;
+  background-color: #ffffff; /* Maintain your background color */
 }
+
 
 h1 {
   font-size: 3.2em;
@@ -65,4 +65,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
